; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_param_driverinit_value_set.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_param_driverinit_value_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devlink = type { i32 }
%union.devlink_param_value = type { i32 }

@DEVLINK_CMD_PARAM_NEW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @devlink_param_driverinit_value_set(%struct.devlink* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %union.devlink_param_value, align 4
  %5 = alloca %struct.devlink*, align 8
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %union.devlink_param_value, %union.devlink_param_value* %4, i32 0, i32 0
  store i32 %2, i32* %7, align 4
  store %struct.devlink* %0, %struct.devlink** %5, align 8
  store i32 %1, i32* %6, align 4
  %8 = load %struct.devlink*, %struct.devlink** %5, align 8
  %9 = load %struct.devlink*, %struct.devlink** %5, align 8
  %10 = getelementptr inbounds %struct.devlink, %struct.devlink* %9, i32 0, i32 0
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @DEVLINK_CMD_PARAM_NEW, align 4
  %13 = getelementptr inbounds %union.devlink_param_value, %union.devlink_param_value* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @__devlink_param_driverinit_value_set(%struct.devlink* %8, i32 0, i32* %10, i32 %11, i32 %14, i32 %12)
  ret i32 %15
}

declare dso_local i32 @__devlink_param_driverinit_value_set(%struct.devlink*, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
